<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>edu.stanford.protege</groupId>
		<artifactId>protege-parent</artifactId>
		<version>5.6.10.1</version>
		<relativePath>../</relativePath>
	</parent>

	<!-- groupId and version are inherited from the parent -->
	<artifactId>protege-desktop</artifactId>
	<packaging>jar</packaging>

	<name>protege-desktop</name>
	<description>Standard build of the Protege Desktop ontology editor.</description>

	<properties>
		<conf.extra.args>--add-opens java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED --add-opens java.xml/com.sun.org.apache.xml.internal.serialize=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/sun.net.www=ALL-UNNAMED -XX:CompileCommand=exclude,javax/swing/text/GlyphView,getBreakSpot</conf.extra.args>
		<!-- <conf.extra.args>-XX:CompileCommand=exclude,javax/swing/text/GlyphView,getBreakSpot</conf.extra.args> -->
		<osx.bundle.name>Protégé.app</osx.bundle.name>
	</properties>

	<dependencies>

		<!-- NOTE: These dependency declarations are required to sort this project to the end of the line in the multimodule build. -->
		
		<!-- edu.stanford.protege dependency list -->

		<dependency>
			<groupId>edu.stanford.protege</groupId>
			<artifactId>protege-common</artifactId>
			<version>${project.parent.version}</version>
	        </dependency>

		<dependency>
			<groupId>edu.stanford.protege</groupId>
			<artifactId>protege-editor-core</artifactId>
			<version>${project.parent.version}</version>
		</dependency>

		<dependency>
			<groupId>edu.stanford.protege</groupId>
			<artifactId>protege-editor-owl</artifactId>
			<version>${project.parent.version}</version>
		</dependency>

		<dependency>
			<groupId>edu.stanford.protege</groupId>
			<artifactId>protege-launcher</artifactId>
			<version>${project.parent.version}</version>
		</dependency>

		<dependency>
			<groupId>org.eclipse.platform</groupId>
			<artifactId>org.eclipse.osgi</artifactId>
			<version>3.18.0</version>
		</dependency>

		<dependency>
			<groupId>org.eclipse.platform</groupId>
			<artifactId>org.eclipse.equinox.common</artifactId>
			<version>3.16.0</version>
		</dependency>

		<dependency>
			<groupId>org.eclipse.platform</groupId>
			<artifactId>org.eclipse.equinox.registry</artifactId>
			<version>3.11.0</version>
		</dependency>

	</dependencies>
	
	<build>
		<plugins>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<id>protege-desktop-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<finalName>protege-${project.version}</finalName>
								<archiverConfig>
								<defaultDirectoryMode>0755</defaultDirectoryMode>
								<defaultFileMode>0755</defaultFileMode>
							</archiverConfig>
							<descriptors>
								<descriptor>src/main/assembly/protege-platform-independent.xml</descriptor>
								<descriptor>src/main/assembly/protege-os-x.xml</descriptor>
								<descriptor>src/main/assembly/protege-win.xml</descriptor>
								<descriptor>src/main/assembly/protege-linux.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

	<profiles>
		<profile>
			<id>release</id>
			<properties>
				<win.dir>target/Protege-${project.version}-win/Protege-${project.version}</win.dir>
			</properties>
			<build>
				<plugins>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-antrun-plugin</artifactId>
						<executions>
							<execution>
								<phase>compile</phase>
								<goals>
									<goal>run</goal>
								</goals>
								<configuration>
									<target>
										<mkdir dir="${win.dir}" />
									</target>
								</configuration>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<artifactId>maven-assembly-plugin</artifactId>
						<executions>
							<execution>
								<id>protege-desktop-assembly</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
								<configuration>
									<finalName>protege-${project.version}</finalName>
									<archiverConfig>
										<defaultDirectoryMode>0755</defaultDirectoryMode>
										<defaultFileMode>0755</defaultFileMode>
									</archiverConfig>
									<descriptors>
										<descriptor>src/main/assembly/protege-platform-independent.xml</descriptor>
										<descriptor>src/main/assembly/protege-os-x.xml</descriptor>
										<descriptor>src/main/assembly/protege-win.xml</descriptor>
										<descriptor>src/main/assembly/protege-linux.xml</descriptor>
									</descriptors>
								</configuration>
							</execution>
						</executions>
					</plugin>

				</plugins>
			</build>
		</profile>
	</profiles>

</project>
